--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "webpack -c ./webpack.config.js --mode development",
-    "start:dev": "webpack serve"
+    "start:dev": "webpack serve --mode development"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -14,6 +14,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.15.0",
     "webpack-dev-server": "^3.11.2"
   },
