--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
+    "react-google-recaptcha": "^2.1.0",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
     "webpack": "^5.15.0",
